# ufoto

./: .gitignore  README.md  pyproject.toml  tox.ini
models/: README.md
models/py3/SMEFTsim_general_alphaScheme_UFO/: __init__.py  object_library.py  write_param_card.py
src/ufoto/: __init__.py  __main__.py  cli.py  loader.py  marshal.py  writer.py
tests/: test_cli.py  test_lib.py  test_loader.py
